manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momonabot
spec:
  replicas: 3
  selector:
    matchLabels:  
      app: momonabot
  template:
    metadata:
      labels:
        app: momonabot
    spec:
      containers:
      - name: momonabot
        image: gcr.io/momonabot/momonabot:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
