manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: momonabot-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: momonabot
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
