manifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: momonabot-ingress
spec:
  backend:
    serviceName: momonabot-service
    servicePort: 80
